# web-site-rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
apps/web/: Cargo.toml  build.rs  docker-compose.yaml
apps/web/config/: loki-config.yaml  otel-collector-config.yaml  prometheus-config.yml
apps/web/otel/: docker-compose.yaml
apps/web/otel/config/: otel-collector-config.yaml  tempo-config.yaml
apps/web/otel/config/fluentd/: Dockerfile  fluent.conf
apps/web/otel/config/grafana/: Makefile
apps/web/otel/config/grafana/provisioning/datasources/: datasources.yml
apps/web/src/: main.rs
apps/web/src/api/: controller.rs
apps/web/src/health/: controller.rs  mod.rs
assets/: index.html
benchmark/: docker-compose.yaml
config/: nginx.conf
libs/otel/: Cargo.toml
libs/otel/src/: lib.rs  logs.rs  metrics.rs  traces.rs
performance/: docker-compose.yaml  run.js
src/: main.rs
src/health/: mod.rs
src/index/: controller.rs  mod.rs  service.rs
src/logger/: mod.rs
src/otel/: logs.rs  metrics.rs  mod.rs  traces.rs
