[package]
name = "test_web_site"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.7"
actix-web = "4.11.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["trace", "metrics", "grpc-tonic"]}
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry_sdk = "0.30.0"
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
