[workspace]

resolver = "3"

members = [
  "apps/web",
  "libs/otel"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = [
  "Richy Yang <w4567892015@gmail.com>",
]
description = "Test project (Rust)"
license = "None"
readme = "./README.md"

[workspace.dependencies]
otel = { path = "./libs/otel" }
