[package]
name = "otel"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
opentelemetry = "0.30.0"
opentelemetry-appender-tracing = "0.30.1"
opentelemetry-otlp = { version = "0.30.0", features = ["trace", "metrics", "grpc-tonic"]}
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry-stdout = { version = "0.30.0", features = ["logs"] }
opentelemetry_sdk = { version = "0.30.0", features = ["logs"] }
tracing = "0.1.41"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
